--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.4.0",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
@@ -17,7 +17,7 @@
         "php-http/curl-client": "^1.7",
         "php-http/guzzle6-adapter": "*",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/apache-pack": "dev-master",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "^4.0",
@@ -30,7 +30,7 @@
 
     "require-dev": {
         "codeception/codeception": "^2.5",
-        "phpro/grumphp": "^0.15.0",
+        "phpro/grumphp": "^1.0",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/dotenv": "^4.0",
         "symfony/profiler-pack": "^1.0",
