Record TMA issues into Elasticsearch

--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,11 @@ APP_SECRET=
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
+###> ELASTICSEARCH ###
+ELASTICSEARCH_URI=
+ELASTICSEARCH_INDEX_TMA_ISSUES=
+###< ELASTICSEARCH ###
+
 ###> SLACK ###
 SLACK_TOKEN=
 SLACK_LINK_TAG=
@@ -37,3 +42,7 @@ GITHUB_APP_INSTALLATION_ID=
 HEROKU_DOMAIN=
 HEROKU_API_KEY=
 ###< HEROKU CREDENTIALS ###
+
+###> TMA ###
+TMA_FILTER_ID=
+###< TMA ###
