--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-curl": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "elasticsearch/elasticsearch": "^7.10",
         "friendsofphp/php-cs-fixer": "^2.15",
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/psr7": "^1.6",
