--- a/.env.dist
+++ b/.env.dist
@@ -15,6 +15,7 @@ SLACK_TOKEN=
 SLACK_LINK_TAG=
 SLACK_REVIEW_CHANNEL=
 SLACK_DEV_CHANNEL=
+SLACK_CHANGELOG_CHANNEL=
 ###< SLACK ###
 
 ###> JIRA CREDENTIALS ###
