Add token in heroku deploy hook

--- a/.env.dist
+++ b/.env.dist
@@ -47,3 +47,7 @@ HEROKU_API_KEY=
 ###> TMA ###
 TMA_FILTER_ID=
 ###< TMA ###
+
+###> HEROKU DEPLOY HOOK ###
+HEROKU_DEPLOY_HOOK_TOKEN=
+###< HEROKU CREDENTIALS ###
