--- a/config/services/amqp.yaml
+++ b/config/services/amqp.yaml
@@ -1,6 +1,3 @@
-parameters:
-  amqp.dsn: '%env(AMQP_DSN)%'
-
 services:
   _defaults:
     autowire: true
@@ -8,3 +5,7 @@ services:
     public: false
 
   App\AMQP\RecordAMQPMetricsCommand:
+
+  App\AMQP\Repository\AMQPQueueMetricsRepository:
+    arguments:
+        $vhost: '%env(AMQP_MONITORING_VHOST)%'
