--- a/.env.dist
+++ b/.env.dist
@@ -51,3 +51,9 @@ TMA_FILTER_ID=
 ###> HEROKU DEPLOY HOOK ###
 HEROKU_DEPLOY_HOOK_TOKEN=
 ###< HEROKU CREDENTIALS ###
+
+AMQP_HOST=https://rabbit.localhost
+AMQP_MONITORING_USER=user
+AMQP_MONITORING_PASSWORD=FAKE_XXXXXXX
+AMQP_MONITORING_VHOST=vhost
+AMQP_ELASTICSEARCH_INDEX=es-index
